erp5_officejs: update export site to have full application in one zip

--- a/bt5/erp5_officejs/PathTemplateItem/web_page_module/gadget_officejs_page_export_html.html
+++ b/bt5/erp5_officejs/PathTemplateItem/web_page_module/gadget_officejs_page_export_html.html
@@ -32,14 +32,19 @@
         <form class="export-form">
           <div class="ui-form">
             <div class="ui-field-contain">
-              <label data-i18n="Cache File:">Cache File:</label>
-              <input name="cachefile" required/>
-            </div>
-          </div>
-          <div class="ui-form">
-            <div class="ui-field-contain">
-              <label data-i18n="Site Url:">Site Url:</label>
-              <input name="site_url" required/>
+              <label data-i18n="Site:">Site:</label>
+              <select name="web_site">
+                <option>Text Editor</option>
+                <option>Illustration Editor</option>
+                <option>PDF Viewer</option>
+                <option>Cribjs</option>
+                <option>Bookmark Manager</option>
+                <option>Onlyoffice Text</option>
+                <option>Onlyoffice Spreadsheet</option>
+                <option>Onlyoffice Presentation</option>
+                <option>Web Table Editor</option>
+                <option>Image Editor</option>
+              </select>
             </div>
           </div>
           <div class="ui-form">
