erp5_web_renderjs_ui: stop use external bootsrap font for officejs

--- a/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_erp5_html.html
+++ b/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_erp5_html.html
@@ -7,7 +7,7 @@
 
     <title>${application_title}</title>
 
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="font-awesome/font-awesome.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="jquerymobile.css">
     <link rel="stylesheet" href="gadget_erp5.css">
 
