update comparaison function names

--- a/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_erp5_searcheditor_html.html
+++ b/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_erp5_searcheditor_html.html
@@ -7,8 +7,8 @@
     data-i18n=Equals To
     data-i18n=Greater Than
     data-i18n=Less Than
-    data-i18n=Not Greater Than
-    data-i18n=Not Less Than
+    data-i18n=Less Or Equals To
+    data-i18n=Greater Or Equals To
     data-i18n=Searchable Text
     data-i18n=Search Expression
   -->
